--- a/CharGenerators.Tests/CharGenerators.Tests.csproj
+++ b/CharGenerators.Tests/CharGenerators.Tests.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -16,7 +16,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Verify.Xunit" Version="16.3.5" />
+    <PackageReference Include="Verify.Xunit" Version="16.3.6" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
       <PrivateAssets>all</PrivateAssets>
@@ -25,8 +25,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CharGenerators.Attributes\CharGenerators.Attributes.csproj" />
     <ProjectReference Include="..\CharGenerators\CharGenerators.csproj" />
+    <ProjectReference Include="..\CharGenerators.Attributes\CharGenerators.Attributes.csproj" />
   </ItemGroup>
 
 </Project>
