Add snapshot tests.

--- a/CharGenerators.Tests/CharGenerators.Tests.csproj
+++ b/CharGenerators.Tests/CharGenerators.Tests.csproj
@@ -29,4 +29,8 @@
     <ProjectReference Include="..\CharGenerators.Attributes\CharGenerators.Attributes.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Snapshots\" />
+  </ItemGroup>
+
 </Project>
